WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268316
Crash when destroying FrameView.
https://bugs.webkit.org/show_bug.cgi?id=268316
Summary
Crash when destroying FrameView.
Megan Gardner
Reported
2024-01-29 11:45:19 PST
Crash when destroying FrameView.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-01-29 11:45:38 PST
<
rdar://problem/121636013
>
Megan Gardner
Comment 2
2024-01-29 11:47:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23443
EWS
Comment 3
2024-01-30 16:23:25 PST
Committed
273792@main
(67a39ee3032a): <
https://commits.webkit.org/273792@main
> Reviewed commits have been landed. Closing PR #23443 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug