Crash when destroying FrameView. https://bugs.webkit.org/show_bug.cgi?id=268316 rdar://121636013

Reviewed by Wenson Hsieh.

Based on the crash log and the crashlog script, we are missing
a null check.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::setWasScrolledByUser):

Canonical link: https://commits.webkit.org/273792@main